# Unlokhttp

./: .gitignore  GUIA_TECNICA.md  README.md
netscope/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
netscope/src/: App.tsx  index.css  main.tsx
netscope/src-tauri/: Cargo.toml  tauri.conf.json
netscope/src-tauri/capabilities/: default.json
netscope/src-tauri/icons/: icon.icns
netscope/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  sniffer.rs
netscope/src/components/: DiagnosticsCards.tsx  FilterModal.tsx  HexViewer.tsx  Layout.tsx  PacketDetail.tsx  PacketList.tsx  Sidebar.tsx  TitleBar.tsx  Toolbar.tsx
netscope/src/components/capture/: CaptureView.tsx  LivePacketFeed.tsx  MiniChart.tsx  SessionsView.tsx  StatCards.tsx
netscope/src/components/diagnostics/: DiagnosticsView.tsx
netscope/src/components/layout/: Sidebar.tsx  Titlebar.tsx
netscope/src/components/packets/: PacketDetailPanel.tsx  PacketsView.tsx
netscope/src/components/ui/: ErrorBanner.tsx  ProtocolBadge.tsx  Spinner.tsx
netscope/src/hooks/: useDiagnostics.ts  useFilteredPackets.ts  usePacketCapture.tsx  useTauriEvents.ts
netscope/src/lib/: tauri.ts
netscope/src/store/: filters.ts  index.tsx
netscope/src/types/: packet.ts
netscope/src/utils/: diagnostics.ts
netscope/src/views/: CaptureView.tsx  DiagnosticsView.tsx  SessionsView.tsx
sniffer_core/: CMakeLists.txt  README.md  build.ps1  build.sh  fetch_deps.ps1  fetch_deps.sh  fetch_npcap_sdk.ps1  main.cpp  sniffer_core.manifest
