[package]
name = "netscope"
version = "0.1.0"
description = "Netscope – network monitoring desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "netscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log   = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
rusqlite       = { version = "0.31", features = ["bundled"] }
chrono         = { version = "0.4", features = ["serde"] }
tokio          = { version = "1", features = ["full"] }
log            = "0.4"
window-vibrancy = "0.7.1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
